# Langchain-Demo

./: gptel_assistant.ipynb  lcel.ipynb  main.ipynb  pyproject.toml
.ipynb_checkpoints/: lcel-checkpoint.ipynb  main-checkpoint.ipynb  pyproject-checkpoint.toml  serve-checkpoint.py
